--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="main-content">
     <section class="video-player-section">
       <video id="videoPlayer" controls autoplay>
-        <source src="videos/sample.mp4" type="video/mp4" />
+        <source src="videos/Test" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
       <h2 id="videoTitle">Sample Video</h2>
