--- a/login.html
+++ b/login.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>Login – MyTube</title><link rel="stylesheet" href="style.css"></head><body><div class="center-box"><h2>Login</h2><input type="text" placeholder="Username"><input type="password" placeholder="Password"><button>Login</button></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Login - MyTube</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <main class="login">
+    <h2>Login</h2>
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button onclick="alert('Logged in!')">Login</button>
+  </main>
+</body>
+</html>
